<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.zlater.Activity.Login.StepTwoSignUpActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F6F6F6">
        <FrameLayout
            android:id="@+id/fm1"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@drawable/background_circle">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="30dp">

                <ImageView
                    android:id="@+id/ic_backToStepOneSignUp"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_back" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30sp">

                <TextView
                    android:paddingTop="50dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ropasans_regular"
                    android:text="@string/step_two"
                    android:textAlignment="center"
                    android:textColor="@color/title"
                    android:textSize="30sp" />
            </LinearLayout>

        </FrameLayout>
        <FrameLayout
            android:id="@+id/fm2"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/background_circle1">

        </FrameLayout>
        <FrameLayout
            android:id="@+id/fm3"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/background_circle2">

        </FrameLayout>
        <customfonts.EditText_Poppins_Regular
            android:id="@+id/edt_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_height"
            android:gravity="center"
            android:background="@drawable/background_gradient2"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:layout_marginRight="20dp"
            android:layout_marginTop="50dp"
            android:inputType="text"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="15sp"
            android:layout_below="@id/fm1"/>

        <customfonts.EditText_Poppins_Regular
            android:id="@+id/edt_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_weight"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/edt_height"
            android:textCursorDrawable="@drawable/sky_blue_cursor_color"
            android:inputType="numberDecimal"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="15sp"
            android:background="@drawable/background_gradient2"/>
        <LinearLayout
            android:id="@+id/gender"
            android:layout_below="@id/edt_weight"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioGroup
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/rb_Male"
                    android:buttonTint="@color/gray"
                    android:text="@string/male"
                    android:fontFamily="@font/josefinsans_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/rb_female"
                    android:buttonTint="@color/gray"
                    android:layout_marginLeft="30dp"
                    android:text="@string/female"
                    android:fontFamily="@font/josefinsans_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RadioGroup>
        </LinearLayout>
        <ScrollView
            android:id="@+id/rule"
            android:layout_below="@+id/gender"
            android:layout_marginVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:fontFamily="@font/josefinsans_regular"
                android:paddingHorizontal="20dp"
                android:textSize="@dimen/text_sm"
                android:textColor="@color/secondary"
                android:text="@string/rule"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </TextView>
        </ScrollView>
        <CheckBox
            android:layout_below="@+id/rule"
            android:id="@+id/cb_Accept"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="30dp"
            android:textColor="#919191"
            android:text="@string/accept_rule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <customfonts.Button_Poppins_Regular
            android:id="@+id/btn_SignUpNow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/complete_sign_up"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_below="@id/cb_Accept"
            android:textCursorDrawable="@drawable/sky_blue_cursor_color"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:background="@drawable/background_gradient"/>

    </RelativeLayout>
</RelativeLayout>