<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.zlater.Activity.Login.StepOneSignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F6F6F6">
        <FrameLayout
            android:id="@+id/fm1"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@drawable/background_circle">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="30dp">

                <ImageView
                    android:id="@+id/ic_closeSignUpStepOne"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_back" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30sp">

                <TextView
                    android:paddingTop="50dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ropasans_regular"
                    android:text="@string/step_one"
                    android:textAlignment="center"
                    android:textColor="@color/title"
                    android:textSize="30dp" />
            </LinearLayout>

        </FrameLayout>
        <FrameLayout
            android:id="@+id/fm2"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/background_circle1">

        </FrameLayout>
        <FrameLayout
            android:id="@+id/fm3"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/background_circle2">

        </FrameLayout>
        <customfonts.EditText_Poppins_Regular
            android:id="@+id/edt_DisplayName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/display_name"
            android:gravity="center"
            android:background="@drawable/background_gradient2"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:layout_marginRight="20dp"
            android:layout_marginTop="50dp"
            android:inputType="text"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="15sp"
            android:layout_below="@id/fm1"/>

        <customfonts.EditText_Poppins_Regular
            android:id="@+id/edt_Username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/edt_DisplayName"
            android:textCursorDrawable="@drawable/sky_blue_cursor_color"
            android:inputType="textEmailAddress"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="15sp"
            android:background="@drawable/background_gradient2"/>
        <customfonts.EditText_Poppins_Regular
            android:id="@+id/edt_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/edt_Username"
            android:textCursorDrawable="@drawable/sky_blue_cursor_color"
            android:inputType="textPassword"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="15sp"
            android:background="@drawable/background_gradient2"/>
        <customfonts.EditText_Poppins_Regular
            android:id="@+id/edt_ReTypePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/edt_Password"
            android:textCursorDrawable="@drawable/sky_blue_cursor_color"
            android:inputType="textPassword"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="15sp"
            android:background="@drawable/background_gradient2"/>



        <customfonts.Button_Poppins_Regular
            android:id="@+id/nextStepSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_below="@id/edt_ReTypePassword"
            android:textCursorDrawable="@drawable/sky_blue_cursor_color"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:background="@drawable/background_gradient"/>
    </RelativeLayout>


</RelativeLayout>